# Bluetooth-Certificate-Authentication

./: LICENSE  README.md
data/: CA.cnf  v3.ext
src/BlueR/Central/: Cargo.toml  Connection_Central.rs  cert_DH.crt  cert_RSA.crt
src/BlueR/Peripheral/: Cargo.toml  Connection_Peripheral.rs  cert_CA.crt  cert_DH.crt  cert_RSA.crt
src/PyBluez/: Connection_Central.py  Connection_Peripheral.py
