[package]
name = "BluethoothAuth"
version = "0.1.0"
edition = "2021"

[[bin]] 
name = "Connection" 
path = "Connection_Central.rs"

[dependencies]
uuid = "1.12.0"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
bluer = { version = "0.17.3", features = ["full"] }
futures = "0.3.31"
env_logger = "0.11.6"
openssl = { version = "0.10.69", features = ["vendored"] }
hex = "0.4.3"
zerocopy = "0.8.18"
